# -_-

./: .gitignore  LICENSE  README.md
lab2/: README.md  lab2_1.ipynb  lab2_2.ipynb  requirements.txt
lab3/: README.md  lab_3.ipynb  requirements.txt
lab4/: .gitignore  README.md  lab_4.py
lab5/: .gitignore  README.md  lab5.py  noaa_cleaned.csv
lab6/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab6/include/: CameraProvider.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab6/src/: CameraProvider.cpp  KeyProcessor.cpp  main.cpp
lab7/: .gitignore  CMakeLists.txt  README.md  preinstall.sh
lab7/include/: CameraProvider.hpp  Display.hpp  FaceDetector.hpp  KeyProcessor.hpp
lab7/src/: CameraProvider.cpp  Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
